yo/yo_core.h


typedef uint64_t yo_id_t;
typedef uint32_t yo_error_t;
enum yo_error
{
    YO_ERROR_NONE,
    YO_ERROR_MEMORY_ALLOCATION_FAILED,
    YO_ERROR_OUT_OF_PERSITENT_MEMORY,
    YO_ERROR_OUT_OF_TEMPORARY_MEMORY,
    YO_ERROR_PARENT_STACK_UNDERFLOW,    
    YO_ERROR_STYLE_STACK_UNDERFLOW,     
    YO_ERROR_ID_COLLISION,             
    YO_ERROR_COUNT,
};
typedef uint32_t yo_axis_t;
enum yo_axis
{
    YO_AXIS_X,
    YO_AXIS_Y,
    YO_AXIS_COUNT,
};
typedef uint32_t yo_layout_t;
enum yo_layout
{
    YO_LAYTOUT_NONE,
    YO_LAYOUT_HORIZONTAL,
    YO_LAYOUT_VERTICAL,
    YO_LAYOUT_TABLE_COLUMN,
    YO_LAYOUT_COUNT,
};
typedef uint32_t yo_align_t;
enum yo_align
{
    YO_ALIGN_STRETCH,
    YO_ALIGN_CENTER,
    YO_ALIGN_FRONT,
    YO_ALIGN_BACK,
    YO_ALIGN_COUNT,
    YO_ALIGN_LEFT   = YO_ALIGN_FRONT,
    YO_ALIGN_TOP    = YO_ALIGN_FRONT,
    YO_ALIGN_RIGHT  = YO_ALIGN_BACK,
    YO_ALIGN_BOTTOM = YO_ALIGN_BACK,
};
typedef uint32_t yo_overflow_t;
enum yo_overflow
{
    YO_OVERFLOW_FIT,
    YO_OVERFLOW_SPILL,
    YO_OVERFLOW_CLIP,
    YO_OVERFLOW_SCROLL,
    YO_OVERFLOW_COUNT
};
typedef uint32_t yo_side_t;
enum yo_side
{
    YO_SIDE_LEFT,
    YO_SIDE_RIGHT,
    YO_SIDE_TOP,
    YO_SIDE_BOTTOM,
    YO_SIDE_COUNT,
};
typedef uint32_t yo_corner_t;
enum yo_corner
{
    YO_CORNER_TOP_LEFT,
    YO_CORNER_TOP_RIGHT,
    YO_CORNER_BOTTOM_LEFT,
    YO_CORNER_BOTTOM_RIGHT,
    YO_CORNER_COUNT,
};
typedef uint32_t yo_popup_flags_t;
enum yo_popup_flags
{
    YO_POPUP_FLAG_NONE,
    YO_POPUP_FLAG_EXCLUSIVE = 1,
};
typedef uint32_t yo_box_flags_t;
enum yo_box_flags
{
    YO_BOX_NONE              = 0,
    YO_BOX_ACTIVATE_ON_CLICK = (1 << 0),
    YO_BOX_ACTIVATE_ON_HOLD  = (1 << 1),
    YO_BOX_HOT_ON_HOVER      = (1 << 2),
    YO_BOX_FULL_ATLAS        = (1 << 3), 
    YO_BOX_DRAW_TEXT_CURSOR  = (1 << 4), 
};
typedef uint32_t yo_anim_flags_t;
enum yo_anim_flags
{
    YO_ANIM_NONE             = 0,
    YO_ANIM_FILL             = (1 << 0),
    YO_ANIM_DIM              = (1 << 1),
    YO_ANIM_MARGIN           = (1 << 2),
    YO_ANIM_PADDING          = (1 << 3),
    YO_ANIM_SCROLL           = (1 << 4),
    YO_ANIM_BORDER_COLOR     = (1 << 5),
    YO_ANIM_BORDER_THICKNESS = (1 << 6),
    YO_ANIM_BORDER_RADIUS    = (1 << 7),
    YO_ANIM_FONT_COLOR       = (1 << 8),
    YO_ANIM_BORDER = YO_ANIM_BORDER_COLOR|YO_ANIM_BORDER_THICKNESS|YO_ANIM_BORDER_RADIUS
};
typedef uint32_t yo_mouse_button_t;
enum yo_mouse_button
{
    YO_MOUSE_BUTTON_LEFT,
    YO_MOUSE_BUTTON_RIGHT,
    YO_MOUSE_BUTTON_MIDDLE,
    YO_MOUSE_BUTTON_COUNT,
};
typedef uint32_t yo_keycode_t;
enum yo_keycode
{
    YO_KEYCODE_NONE = 0,
    YO_KEYCODE_LEFT_ARROW = 128, 
    YO_KEYCODE_RIGHT_ARROW,
    YO_KEYCODE_UP_ARROW,
    YO_KEYCODE_DOWN_ARROW,
    YO_KEYCODE_HOME,
    YO_KEYCODE_END,
    YO_KEYCODE_SPACE,
    YO_KEYCODE_RETURN,
    YO_KEYCODE_BACKSPACE,
    YO_KEYCODE_DELETE,
};
typedef uint16_t yo_modifier_t;
enum yo_modifier
{
    YO_MODIFIER_NONE,
    YO_MODIFIER_SHIFT,
    YO_MODIFIER_CTLR,
    YO_MODIFIER_ALT,
    YO_MODIFIER_COUNT,
};
typedef uint32_t yo_frame_flags_t;
enum yo_frame_flags
{
    YO_FRAME_FLAG_NONE,
    YO_FRAME_FLAG_LAZY,
};
typedef struct yo_signal yo_signal_t;
struct yo_signal
{
    union { bool left_clicked, clicked; };
    bool right_clicked;
    bool       hovered;
    yo_v2i_t mouse_pos;  
    yo_keycode_t keycode;
    bool is_alt_down;
    bool is_ctrl_down;
    bool is_shift_down;
    bool is_hot;
    bool is_active;
};
typedef uint32_t yo_draw_cmd_type_t;
enum yo_draw_cmd_type
{
    YO_DRAW_CMD_NONE,
    YO_DRAW_CMD_AABB,
    YO_DRAW_CMD_TRI,
    YO_DRAW_CMD_QUAD,
};
typedef struct yo_render_info yo_render_info_t;
struct yo_render_info
{
    uint32_t w;
    uint32_t h;
    yo_draw_cmd_t *draw_cmds;
    size_t         draw_cmds_count;
    struct
    {
        uint32_t id;
        yo_v2i_t dim;
        void    *pixels;
        bool     dirty;
    } tex;
    bool lazy;
};
typedef struct yo_config yo_config_t;
struct yo_config
{
    uint32_t popup_close_delay;
};
typedef struct yo_font_id yo_font_id_t; 
struct yo_font_id
{
    union
    {
        struct
        {
            uint16_t slot;
            uint16_t _unused;
            uint32_t generation;
        };
        struct
        {
            uint64_t u64;
        };
    };
};
typedef struct yo_length yo_length_t;
struct yo_length
{
    float min, max, rel;
    bool is_rel;
};
typedef struct yo_text_field_state yo_text_field_state_t;
struct yo_text_field_state
{
    uint32_t cursor;
    uint32_t marker;
};
typedef struct yo_border yo_border_t;
struct yo_border
{
    yo_corners_f32_t radius;
    float            thickness;
    yo_v4f_t         color;
};
typedef struct yo_box     yo_box_t;
typedef struct yo_context yo_context_t;
YO_API yo_context_t *   yo_create_context(YO_PRINTF_FORMAT_STRING yo_config_t *config);
YO_API void             yo_destroy_context(yo_context_t *context);
YO_API void             yo_select_context(yo_context_t *context);
YO_API bool             yo_begin_frame(float time, yo_frame_flags_t flags);
YO_API void             yo_end_frame(yo_render_info_t *buffer);
YO_API void             yo_input_begin(void);
YO_API void             yo_input_mouse_state(bool buttons[YO_MOUSE_BUTTON_COUNT], uint32_t x, uint32_t y);
YO_API void             yo_input_mouse_click(yo_mouse_button_t button, uint32_t x, uint32_t y, yo_modifier_t modifiers);
YO_API void             yo_input_scroll(float x, float y);
YO_API void             yo_input_key(yo_keycode_t key, yo_modifier_t modifiers);
YO_API void             yo_input_char(char c, yo_modifier_t modifiers);
YO_API void             yo_input_unicode(uint32_t codepoint, yo_modifier_t modifiers);
YO_API void             yo_input_end(void);
YO_API yo_v2i_t         yo_query_mouse_pos(void);
YO_API bool             yo_query_mouse_button(yo_mouse_button_t button);      
YO_API bool             yo_query_mouse_button_down(yo_mouse_button_t button); 
YO_API bool             yo_query_mouse_button_up(yo_mouse_button_t button);   
YO_API yo_v2f_t         yo_query_scroll(void);
YO_API float            yo_delta(void);
YO_API yo_id_t          yo_id_from_string(char *string);
YO_API yo_id_t          yo_id_from_format(YO_PRINTF_FORMAT_STRING char *format, ...);
YO_API yo_id_t          yo_id_from_format_v(char *format, va_list args);
YO_API void             yo_push_id(yo_id_t id);
YO_API yo_id_t          yo_pop_id(void);
YO_API yo_box_t *       yo_box(yo_id_t id, yo_box_flags_t flags);
YO_API yo_signal_t      yo_get_signal(yo_box_t *box);
YO_API yo_recti_t       yo_get_screen_rect(yo_box_t *box);
YO_API yo_rectf_t       yo_get_arranged_rect(yo_box_t *box);
YO_API yo_v2f_t         yo_get_content_dim(yo_box_t *box);
YO_API void             yo_set_tag(char *tag);
YO_API void             yo_set_text(char *text);
YO_API void             yo_set_layout(yo_layout_t layout);
YO_API void             yo_set_fill(yo_v4f_t fill);
YO_API void             yo_set_border_s(yo_border_t border);
YO_API void             yo_set_border(float thickness, yo_v4f_t color, float radius);
YO_API void             yo_set_border_thickness(float thickness);
YO_API void             yo_set_border_color(yo_v4f_t color);
YO_API void             yo_set_border_radius(float radius);
YO_API void             yo_set_font(yo_font_id_t font, uint32_t size, yo_v4f_t color);
YO_API void             yo_set_font_id(yo_font_id_t font);
YO_API void             yo_set_font_size(uint32_t size);
YO_API void             yo_set_font_color(yo_v4f_t color);
YO_API void             yo_set_on_top(bool on_top);
YO_API void             yo_set_overflow_a(yo_overflow_t overflow, yo_axis_t axis);
YO_API void             yo_set_overflow_h(yo_overflow_t overflow);
YO_API void             yo_set_overflow_v(yo_overflow_t overflow);
YO_API void             yo_set_align_a(yo_align_t align, yo_axis_t axis);
YO_API void             yo_set_align_h(yo_align_t align);
YO_API void             yo_set_align_v(yo_align_t align);
YO_API void             yo_set_dim_a(yo_length_t length, yo_axis_t axis);
YO_API void             yo_set_dim_h(yo_length_t length);
YO_API void             yo_set_dim_v(yo_length_t length);
YO_API void             yo_set_margin(float left, float top, float right, float bottom);
YO_API void             yo_set_margin_hv(float h, float v);
YO_API void             yo_set_margin_a(float forward, float backward, yo_axis_t axis);
YO_API void             yo_set_margin_left(float left);
YO_API void             yo_set_margin_top(float top);
YO_API void             yo_set_margin_right(float right);
YO_API void             yo_set_margin_bottom(float bottom);
YO_API void             yo_set_padding(float left, float top, float right, float bottom);
YO_API void             yo_set_padding_hv(float h, float v);
YO_API void             yo_set_anim(yo_anim_flags_t flags, float rate);
YO_API void             yo_set_anim_flags(yo_anim_flags_t flags);
YO_API void             yo_set_anim_rate(float rate);
YO_API void             yo_set_scroll(yo_v2f_t offset);
YO_API void             yo_set_scroll_a(float offset, yo_axis_t axis);
YO_API void             yo_set_scroll_h(float offset);
YO_API void             yo_set_scroll_v(float offset);
YO_API yo_text_field_state_t *  yo_get_text_field_state(void);
YO_API void *                   yo_get_userdata(size_t size);
YO_API void             yo_begin_children(void);
YO_API void             yo_begin_children_of(yo_box_t *box);
YO_API void             yo_end_children(void);
YO_API void             yo_open_popup(yo_id_t id, yo_popup_flags_t flags);
YO_API bool             yo_begin_popup(yo_id_t id);
YO_API void             yo_end_popup(void);
YO_API void             yo_scaled_triangle(yo_v2f_t p0, yo_v2f_t p1, yo_v2f_t p2, yo_v4f_t color0, yo_v4f_t color1, yo_v4f_t color2);
YO_API void             yo_scaled_checkmark(yo_v4f_t color);
YO_API yo_font_id_t     yo_font_load(void *data, size_t data_size);
YO_API void             yo_font_unload(yo_font_id_t font);
YO_API void *           yo_alloc_temp(size_t size);
YO_API char *           yo_alloc_temp_string(YO_PRINTF_FORMAT_STRING char *format, ...);
YO_API char *           yo_alloc_temp_string_v(YO_PRINTF_FORMAT_STRING char *format, va_list args);
YO_API yo_error_t       yo_get_error(void);
YO_API char *           yo_get_error_message(void);
YO_API void             yo_debug_show_atlas_partitions(void);
YO_API void             yo_debug_show_atlas_texture(void);