yo/yo_widgets.h


typedef uint32_t yo_circle_flags_t;
enum yo_circle_flags
{
    YO_CIRCLE_NONE                 = 0,
    YO_CIRCLE_BORDER_ADDS_DIAMETER = 1,
};